# dna-analysis-mcp

./: .gitignore  CLAUDE.md  README.md  manifest.json  package-lock.json  package.json  pyproject.toml  server.py
server/: index.js
src/: index.ts
