[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dna-analysis-mcp"
version = "0.1.0"
description = "MCP server for DNA analysis with privacy protection"
authors = [
    {name = "DNA Analysis Team"}
]
dependencies = [
    "mcp",
]
requires-python = ">=3.10"

[tool.hatch.build.targets.wheel]
packages = ["."]

